# focus-tui

./: .env-template  .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  pyproject.toml  readme.md  requirements.txt
src/focuskeeper/: __main__.py  _numbers.py  app.py  app_paths.py  assets.py  clock.py  config.py  config_manager.py  constants.py  db.py  fake_api_client.py  settings.py  setup.py  sound_manager.py  sound_mixer.py  sound_settings.py  style.tcss  validators.py
src/focuskeeper/composite_widgets/: sound_settings.py
src/focuskeeper/controllers/: __init__.py  controller.py  stopwatch.py  timer.py
src/focuskeeper/modals/: __init__.py  add_sound_tree.py  confirmation_popup.py  edit_sound.py
src/focuskeeper/screens/: __init__.py  base_screen.py  clock.py  focus_screen.py  settings.py  settings_screen.py  stopwatch.py  timer.py
src/focuskeeper/utils/: sound.py
src/focuskeeper/widgets/: __init__.py  about_settings.py  accordion.py  clock_display.py  music_directory_tree.py  sound_settings.py  sound_volume_input.py
src/focusseeds/: __main__.py  _app.py  about_settings.py  app.py  clock.py  config.py  confirmation_popup.py  db.py  fake_api_client.py  settings.py  setup.py  sound_mixer.py  sound_settings.py  validators.py
src/focustui/: __init__.py  __main__.py  app.py  assets.py  config_manager.py  constants.py  db.py  fake_api_client.py  main.py  setup.py  sound_file_manager.py  sound_manager.py  style.tcss  validators.py
src/focustui/composite_widgets/: __init__.py  about_settings.py  clock_display.py  sound_settings.py
src/focustui/modals/: __init__.py  add_sound_tree.py  edit_sound.py
src/focustui/screens/: __init__.py  base_screen.py  focus_screen.py  settings_screen.py
src/focustui/static/sounds/shorts/: Woohoo.flac
src/focustui/styles/: borders.tcss  style.tcss
src/focustui/utils/: __init__.py  inputs.py  parsers.py
src/focustui/widgets/: __init__.py  accordion.py  app_header.py  inputs.py  music_directory_tree.py  sound_volume_input.py
src/growbonsai/: __main__.py  _numbers.py  app.py  clock.py  config.py
static/sounds/longs/: Woodpecker_Forest.flac
static/sounds/shorts/: Acid_bassline.flac  Braam.flac  Landing-forcefield.flac
tests/: test_config_manager.py  test_config_model.py  test_sound_manager.py
tests/utils/: test_parsers.py  test_session_len_parser.py
