[project]
name = "FocusKeeper"
version = "0.1.0"
authors = [
  { name="Simon Piechutowski", email="szymonpiechutowski@gmail.com" },
]
dependencies = [
    "textual~=0.73.0",
    "pygame-ce~=2.5.0",
    "platformdirs~=4.2.2",
    "PyYAML~=6.0.1",
    "python-dotenv~=1.0.1",
]
description = "Your Deep Focus Session Buddy."
readme = "readme.md"
requires-python = ">=3.12"

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
    "textual-dev~=1.5.1",
]

[project.urls]
Homepage = "https://github.com/Zimzozaur/FocusKeeper-TUI"
Issues = "https://github.com/Zimzozaur/FocusKeeper-TUI/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
paths = ["src/focuskeeper/static/**"]

[tool.hatch.build.targets.wheel]
paths = ["src/focuskeeper/static/**"]

[project.scripts]
focuskeeper = "focuskeeper.__main__:main"

[tool.ruff.lint]
select = [
    'ALL'
]